package baitap.b2;

import java.util.List;

public interface Tokenize {
    List<String> tokenize();
}
